third_party/rust/chromium_crates_io/vendor/quote-1.0.36/tests/ui/not-quotable.stderr
error[E0277]: the trait bound `Ipv4Addr: ToTokens` is not satisfied
 --> tests/ui/not-quotable.rs:6:13
  |
6 |     let _ = quote! { #ip };
  |             ^^^^^^^^^^^^^^
  |             |
  |             the trait `ToTokens` is not implemented for `Ipv4Addr`
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `ToTokens`:
            &'a T
            &'a mut T
            Box<T>
            Cow<'a, T>
            Option<T>
            Rc<T>
            RepInterp<T>
            String
          and $N others
  = note: this error originates in the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
